# pga-tournament-analysis

./: .gitignore  DEPLOY_TO_STREAMLIT_CLOUD.md  requirements.txt  start-servers.bat  streamlit_app.py
.kiro/hooks/: start-dev-servers.kiro.hook
.kiro/specs/pga-tournament-analysis/: design.md  requirements.md  tasks.md
backend/: pyproject.toml  requirements.txt  streamlit_app.py
backend/.streamlit/: config.toml
backend/app/: config.py  database.py  main.py  models.py  scheduler.py
backend/app/analysis/: archetypes.py  engine.py  scoring.py
backend/app/data/: ingestion.py  pga_client.py  tournament_resolver.py
backend/app/routes/: players.py  system.py  tournament.py
backend/tests/: test_analysis.py  test_archetypes.py  test_comparison.py  test_pga_client.py  test_player_endpoints.py  test_rankings.py  test_recency.py  test_scheduler.py  test_system_endpoints.py  test_tournament.py  test_tournament_endpoints.py
frontend/: next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/player/[id]/: page.tsx
frontend/src/app/season/: page.tsx
frontend/src/components/: PlayerRankingsTable.tsx  StatImportanceChart.tsx  TournamentHeader.tsx
frontend/src/lib/: api.ts  sort.ts
frontend/tests/: player-rankings-table.test.ts  sort.test.ts  stat-importance-chart.test.ts  tournament-header.test.ts
