[project]
name = "pga-tournament-analysis"
version = "0.1.0"
description = "PGA Tournament Analysis Tool - identifies key stats and ranks players"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "sqlalchemy==2.0.35",
    "httpx==0.27.2",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.112.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
